[metadata]
name = pylint_import_modules
home-page = https://github.com/zozoens31/pylint_import_modules
summary = A Pylint plugin to ensure only modules are imported.
description-file = README.md
keywords =
    pylint
    plugin
    import
    module
author = Cyrille Corpet
author-email = cyrille@bayesimpact.org
license = GPL-3.0

[files]
packages =
    pylint_import_modules
